smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/statement-unknown.smithy
// Syntax error at line 7, column 1: Unknown shape type: invalid | Model
// ^ The list of expected tokens goes on, but it's been trimmed here to help reduce the
// number of time this test will need to be updated if/when the syntax changes.
namespace foo.bar

// "invalid" is not a known statement.
invalid String
